! Update based on users's feedbacks (add description, move Facebook sources to top, set G1 is default in status list, set chat is default in campaign list)

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
             width: 500px;
             background-color: #f1f1f1;
         }
+
         form {
             margin: 0 auto;
             width: 50%;
@@ -43,6 +44,7 @@
             text-align: center;
             margin-top: 10px;
         }
+
         #logout {
             width: 100%;
             padding: 12px;
@@ -50,7 +52,7 @@
             display: inline-block;
             border: 1px solid #ccc;
             box-sizing: border-box;
-        }   
+        }
     </style>
 </head>
 
@@ -63,9 +65,10 @@
         <input type="submit" value="Đăng nhập">
     </form>
     <div id="info"></div>
-    <br/>
-    <input id="logout" type="button" value="Đăng xuất"/>
-    <script src="./scripts/login.js"></script>
+    <br />
+    <input id="logout" type="button" value="Đăng xuất" />
+    <script type="module" src="./scripts/common.js"></script>
+    <script type="module" src="./scripts/login.js"></script>
 </body>
 
 </html>
