--- a/lead-form.html
+++ b/lead-form.html
@@ -70,60 +70,16 @@
                     <option value=1>Chị</option>
                 </select>
             </div>
-            <!-- <div class="mb-3">
-                <label for="photo" class="form-label">Photo:</label>
-                <input type="file" class="form-control" id="photo" name="photo">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="birthdate" class="form-label">Birthdate:</label>
-                <input type="date" class="form-control" id="birthdate" name="birthdate">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="province" class="form-label">Province:</label>
-                <input type="text" class="form-control" id="province" name="province">
-            </div>
             <div class="mb-3">
-                <label for="city" class="form-label">City:</label>
-                <input type="text" class="form-control" id="city" name="city">
+                <label for="description" class="form-label">Description:</label>
+                <textarea placeholder="Description" id="description" class="form-control" name="description"></textarea>
             </div>
-            <div class="mb-3">
-                <label for="address" class="form-label">Address:</label>
-                <input type="text" class="form-control" id="address" name="address">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="background" class="form-label">Background:</label>
-                <input type="text" class="form-control" id="background" name="background">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="goal" class="form-label">Goal:</label>
-                <input type="text" class="form-control" id="goal" name="goal">
-            </div>
-            <div class="mb-3">
-                <label for="job" class="form-label">Job:</label>
-                <input type="text" class="form-control" id="job" name="job">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="product" class="form-label">Product:</label>
-                <input type="text" class="form-control" id="product" name="product">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="trainingCenter" class="form-label">Training Center:</label>
-                <input type="text" class="form-control" id="trainingCenter" name="trainingCenter">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="studyPlace" class="form-label">Study Place:</label>
-                <input type="text" class="form-control" id="studyPlace" name="studyPlace">
-            </div> -->
-            <!-- <div class="mb-3">
-                <label for="group" class="form-label">Group:</label>
-                <input type="text" class="form-control" id="group" name="group">
-            </div> -->
             <input type="button" class="btn btn-primary" id="saveLead" value="Submit">
             <div id="info"></div>
         </form>
     </div>
-
-    <script src="./scripts/lead-form.js"></script>
+    <script type="module" src="./scripts/common.js"></script>
+    <script type="module" src="./scripts/lead-form.js"></script>
 </body>
 
 </html>
