--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-    <title>Login</title>
+    <title>CodeGym Lead</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             width: 500px;
@@ -40,6 +42,10 @@
             opacity: 0.8;
         }
 
+        #loginForm {
+            display: none;
+        }
+
         #info {
             text-align: center;
             margin-top: 10px;
@@ -52,11 +58,17 @@
             display: inline-block;
             border: 1px solid #ccc;
             box-sizing: border-box;
+            display: none;
         }
     </style>
 </head>
 
 <body>
+    <div class="d-flex justify-content-center">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
     <form id="loginForm">
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email"><br>
