--- a/popup.html
+++ b/popup.html
@@ -64,11 +64,11 @@
 </head>
 
 <body>
-    <div class="d-flex justify-content-center">
-        <div class="spinner-border" role="status">
-          <span class="visually-hidden">Loading...</span>
+    <div class="d-flex justify-content-center" style="margin-top: 30px;">
+        <div id="loading" class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
-      </div>
+    </div>
     <form id="loginForm">
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email"><br>
